# dayu_widgets

./: .all-contributorsrc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  GITHUB_PAGES_SETUP.md  LICENSE  MANIFEST.in  README.md  llms.txt  noxfile.py  pyproject.toml  pytest.ini  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: bumpversion.yml  ci-test.yml  code_check.yml  generate_llms_txt.yml  import-test.yml  python-publish.yml  run_tests.yml  test.yml
dayu_widgets/: MAbstractSpinBox.py  MAlert.py  MAvatar.py  MBadge.py  MBreadcrumb.py  MBrowser.py  MButton.py  MButtonGroup.py  MCard.py  MCarousel.py  MCheckBox.py  MCheckBoxGroup.py  MCircle.py  MCollapse.py  MColorPalette.py  MComboBox.py  MDivider.py  MDockWidget.py  MFieldMixin.py  MFlowLayout.py  MHeaderView.py  MHeaderViewPrivate.py  MItemModel.py  MItemView.py  MItemViewFullSet.py  MItemViewSet.py  MLabel.py  MLineEdit.py  MLineTabWidget.py  MLoading.py  MMenu.py  MMenuTabWidget.py  MMessage.py  MPage.py  MProgressBar.py  MPushButton.py  MRadio.py  MRadioButton.py  MRadioGroup.py  MSelect.py  (+69 more)
dayu_widgets/examples/: MAbstractSpinBoxTest.py  MAlertTest.py  MAvatarTest.py  MBadgeTest.py  MBreadcrumbTest.py  MBrowserTest.py  MButtonTest.py  MCalendarWidgetTest.py  MCardTest.py  MCarouselTest.py  MCheckBoxGroupTest.py  MCheckBoxTest.py  MCircleTest.py  MCollapseTest.py  MComBoxTest.py  MDividerTest.py  MFieldMixinTest.py  MLabelTest.py  MLineEditTest.py  MLineTabWidgetTest.py  MListViewTest.py  MMenuTabWidgetTest.py  MMenuTest.py  MMessageTest.py  MPageTest.py  MProgressBarTest.py  MPushButtonGroupTest.py  MPushButtonTest.py  MRadioButtonGroupTest.py  MRadioButtonTest.py  MRadioGroupTest.py  MRadioTest.py  MSelectTest.py  MSequenceFileTest.py  MSliderTest.py  MSpinBoxTest.py  MSwitchTest.py  MTabWidgetTest.py  MTableTest.py  MTableViewTest.py  (+10 more)
dayu_widgets/qt/: __init__.py
dayu_widgets/static/: __init__.py  base.json  dark.json  main.qss
dayu_widgets/test/: conftest.py  test_alert.py  test_avatar.py  test_badge.py  test_check_box.py  test_divider.py  test_dock_widget.py  test_label.py  test_loading.py  test_m-button.py  test_m-divider.py  test_m-radio-group.py  test_mixin.py  test_progress_bar.py  test_progress_circle.py  test_push_button.py  test_radio_button.py  test_slider.py  test_spin_box.py  test_stacked_widget.py  test_switch.py  test_utils_apply_formatter.py  test_utils_color.py  test_utils_formatter.py  test_utils_from_list_to_nested_dict.py  test_utils_get_percent.py  test_utils_get_static_file.py  test_utils_obj_value.py  test_utils_overflow_format.py  test_utils_real_model_and_real_index.py
dayu_widgets3/: __init__.py  __version__.py  alert.py  avatar.py  badge.py  breadcrumb.py  browser.py  button_group.py  card.py  carousel.py  check_box.py  collapse.py  color_palette.py  combo_box.py  completer.py  db_path_buttons.py  divider.py  dock_widget.py  drawer.py  field_mixin.py  flow_layout.py  form.py  header_view.py  item_model.py  item_view.py  item_view_full_set.py  item_view_set.py  label.py  line_edit.py  line_tab_widget.py  loading.py  menu.py  menu_tab_widget.py  message.py  mixin.py  page.py  popup.py  progress_bar.py  progress_circle.py  push_button.py  (+12 more)
dayu_widgets3/qt/: __init__.py
dayu_widgets3/static/: main.qss
docs/: CNAME  README.md  _coverpage.md  _navbar.md  _sidebar.md  component_template.md  custom-theme.css  index.html
docs/en-us/: README.md  _coverpage.md  _sidebar.md  alert.md  avatar.md  badge.md  breadcrumb.md  browser.md  card.md  carousel.md  cascader.md  check_box.md  circle.md  collapse.md  combo_box.md  coverpage.md  custom_theme.md  date_edit.md  date_time_edit.md  divider.md  double_spin_box.md  drawer.md  flow_layout.md  icon.md  item_view_full_set.md  item_view_set.md  label.md  line_edit.md  line_tab_widget.md  list_view.md  loading.md  menu_tab_widget.md  message.md  page.md  pixmap.md  progress_bar.md  progress_circle.md  push_button.md  quick_guide.md  radio_button.md  (+9 more)
docs/zh-cn/: README.md  _coverpage.md  _sidebar.md  alert.md  avatar.md  badge.md  breadcrumb.md  browser.md  card.md  carousel.md  cascader.md  check_box.md  circle.md  collapse.md  combo_box.md  coverpage.md  drawer.md  (+32 more)
examples/: _mock_data.py  alert_example.py  avatar_example.py  badge_example.py  breadcrumb_example.py  browser_example.py  card_example.py  carousel_example.py  check_box_example.py  check_box_group_example.py  collapse_example.py  combo_box_example.py  delegate_button_example.py  demo.py  divider_example.py  drawer_example.py  field_mixin_example.py  form_example.py  item_view_big_type_example.py  item_view_full_set_example.py  item_view_set_example.py  label_example.py  line_edit_example.py  line_tab_widget_example.py  list_view_example.py  loading_example.py  menu_example.py  menu_tab_widget_example.py  message_example.py  overlay_example.py  overlay_example.ui  page_example.py  progress_bar_example.py  progress_circle_example.py  push_button_example.py  push_button_group_example.py  radio_button_example.py  radio_button_group_example.py  sequence_file_example.py  slider_example.py  (+13 more)
nox_actions/: __init__.py  blender_test.py  lint.py  maya_test.py  test.py  typecheck.py  utils.py
scripts/: deploy.py  generate_llms_txt.py
tests/: test_MAbstractSpinBox.py  test_MAlert.py  test_MAvatar.py  test_MBadge.py  test_alert.py  test_avatar.py  test_badge.py  test_check_box.py  test_divider.py  test_dock_widget.py  test_label.py  test_loading.py  test_mabstractspinbox.py  test_malert.py  test_mavatar.py  test_mbadge.py  test_mixin.py  test_progress_bar.py  test_progress_circle.py  test_push_button.py  test_radio_button.py  test_slider.py  test_spin_box.py  test_spinbox.py  test_stacked_widget.py  test_switch.py  test_utils_apply_formatter.py  test_utils_color.py  test_utils_default_formatter.py  test_utils_display_formatter.py  test_utils_formatter.py  test_utils_from_list_to_nested_dict.py  test_utils_get_percent.py  test_utils_get_static_file.py  test_utils_obj_value.py  test_utils_overflow_format.py  test_utils_real_model_and_real_index.py
