[tool.poetry]
name = "dayu_widgets3"
version = "0.0.0"
description = "Components for PySide2/PySide6."
homepage = "https://github.com/muyr/dayu_widgets3"
repository = "https://github.com/muyr/dayu_widgets3"
documentation = "https://muyr.github.io/dayu_widgets3/#/"
keywords = ["UI", "PySide2", "PyQt5", "PySide6"]
authors = ["muyanru <muyanru@163.com>"]
license = "MIT"
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

packages = [
    { include = "dayu_widgets3" },
]

[tool.poetry.dependencies]
python = "^3.7,<3.11,"
qtpy = "^2.3.1"


[tool.poetry.group.dev.dependencies]
pyside2 = "^5.15.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.12.1"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "dayu_widgets3/__version__.py"
]


[tool.black]
line-length = 120
target_version = ['py310']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''

[tool.isort]
profile = "black"
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true
filter_files = true
known_first_party = ["dayu_widgets3"]

# Enforce import section headers.
import_heading_future = "Import future modules"
import_heading_stdlib = "Import built-in modules"
import_heading_thirdparty = "Import third-party modules"
import_heading_firstparty = "Import local modules"

force_sort_within_sections = true
force_single_line = true

# All project unrelated unknown imports belong to third-party.
default_section = "THIRDPARTY"
skip_glob = "*/docs/conf.py"
