[metadata]
name = dayu_widgets
version = attr: dayu_widgets.__version__.__version__
description = Components for PySide2/PySide6.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/phenom-films/dayu_widgets
author = muyanru
author_email = muyanru@163.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = find:
python_requires = >=3.7
install_requires =
    qtpy>=2.3.1

[options.packages.find]
include = dayu_widgets*
exclude = 
    tests*
    examples*
    nox_actions*
    screenshots*
    scripts*
    docs*

[options.extras_require]
pyside2 = PySide2>=5.15.2.1
pyside6 = PySide6>=6.4.2
